--- a/templates/app.html
+++ b/templates/app.html
@@ -10,7 +10,10 @@
     </head>
     <body>
       <nav class="navbar has-shadow" role="navigation">
-          <div class="navbar-brand"> <div class="navbar-logo"></div> </div>
+          <div class="navbar-brand">
+            <div class="navbar-logo">
+            </div>
+          </div>
           <div class="navbar-menu is-active">
               <div class="navbar-start">
                   <!-- navbar items -->
@@ -161,6 +164,19 @@
                 </span>
                 <span>Search</span>
               </a>
+            </div>
+            <div class="file is-small is-boxed is-warning">
+              <label class="file-label">
+                <input id="upload-image" accept="image/*" class="file-input" type="file">
+                <span class="file-cta">
+                  <span class="file-icon">
+                    <i class="fas fa-upload"></i>
+                  </span>
+                  <span class="file-label">
+                    Upload an image to search
+                  </span>
+                </span>
+              </label>
             </div>
             <div class="canvas-container">
               <div id="canvas" height="430" width="440"></div>
